--- a/frontend/resources/styles/main/partials/viewer.scss
+++ b/frontend/resources/styles/main/partials/viewer.scss
@@ -8,7 +8,9 @@
 
 .viewer-section {
   height: calc(100vh - 48px);
-
+  &.fullscreen{
+    height: 100vh;
+  }
   grid-row: 1 / span 2;
   grid-column: 1 / span 1;
 
